2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint: Removed unneeded cout.
	
2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Incremented timer.

	* src/endpoint.cpp, src/endpoint.h: Added missing function for
	call transfer. Thanks to Sandro for finding this!!
	
2003-06-18 Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/pref_window.cpp: Fixed wrong key for show_popup.
	
2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Make sure asserts are always displayed in a popup.
	
2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Added a 0.5s timeout when there is a "Connection
	lost".
	
2003-06-18 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Retry 5 times in case of "Connection lost".
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Removed disconnect timeout.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Fixed double free!

2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Fixed crash due to a key being escaped twice.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Don't upgrade if the port is = 0. One less 
	last minute bug...
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Fixed incorrect gconf key for the sport attribute.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp, src/config.cpp: Fixed bugs again.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Cleaned the API so that groups are always
	passed in lowercase UTF-8, but unescaped, to functions.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Check if a group already exists using
	the escaped gconf key.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp: Added Calls History to the tray menu.
	