@@ -1,5 +1,10 @@
 2003-06-18 Damien Sandras  <dsandras@seconix.com>
 
+	* src/endpoint.cpp, src/endpoint.h: Fixed possible problem
+	when getting the IP for the H.225 Signalling Channel.
+	
+2003-06-18 Damien Sandras  <dsandras@seconix.com>
+
 	* src/endpoint: Removed unneeded cout.
 	
 2003-06-18 Damien Sandras  <dsandras@seconix.com>
